--- a/GNU Mailman/gnu-mailman-hyperkitty-sv.po
+++ b/GNU Mailman/gnu-mailman-hyperkitty-sv.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: GNU Mailman Hyper Kitty\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-01-12 21:08+0000\n"
-"PO-Revision-Date: 2025-06-06 17:24+0000\n"
-"Last-Translator: Daniel Nylander <daniel@danielnylander.se>\n"
+"PO-Revision-Date: 2025-06-07 09:03+0200\n"
+"Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: Swedish <https://hosted.weblate.org/projects/gnu-mailman/"
 "hyperkitty/sv/>\n"
 "Language: sv\n"
@@ -17,7 +17,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 5.12-dev\n"
+"X-Generator: Poedit 3.6\n"
 
 #: forms.py:53
 msgid "Add a tag..."
@@ -112,7 +112,7 @@ msgid ""
 "This REST API can return the information into several formats.  The default "
 "format is html to allow human readibility."
 msgstr ""
-"Detta REST API kan returnera informationen i flera olika format.  "
+"Detta REST-API kan returnera informationen i flera olika format.  "
 "Standardformatet är html för att möjliggöra mänsklig läsbarhet."
 
 #: templates/hyperkitty/api.html:14
@@ -128,7 +128,7 @@ msgstr "Listan över tillgängliga format är:"
 
 #: templates/hyperkitty/api.html:20
 msgid "Plain text"
-msgstr "Enkel text"
+msgstr "Vanlig text"
 
 #: templates/hyperkitty/api.html:26
 msgid "List of mailing-lists"
@@ -215,7 +215,7 @@ msgstr "Logga in"
 
 #: templates/hyperkitty/base.html:81 templates/hyperkitty/base.html:108
 msgid "Sign Up"
-msgstr "Registrera"
+msgstr "Registrera dig"
 
 #: templates/hyperkitty/base.html:92
 msgid "Manage this list"
@@ -239,7 +239,7 @@ msgstr "Tangentbordsgenvägar"
 
 #: templates/hyperkitty/base.html:197
 msgid "Thread View"
-msgstr "Tråd Visa"
+msgstr "Trådvy"
 
 #: templates/hyperkitty/base.html:199
 msgid "Next unread message"
@@ -255,7 +255,7 @@ msgstr "Hoppa till alla trådar"
 
 #: templates/hyperkitty/base.html:202
 msgid "Jump to MailingList overview"
-msgstr "Hoppa till MailingList-översikt"
+msgstr "Hoppa till sändlistöversikt"
 
 #: templates/hyperkitty/base.html:217
 msgid "Powered by"
@@ -267,11 +267,11 @@ msgstr "version"
 
 #: templates/hyperkitty/errors/notimplemented.html:7
 msgid "Not implemented yet"
-msgstr "Ej implementerat ännu"
+msgstr "Inte implementerat ännu"
 
 #: templates/hyperkitty/errors/notimplemented.html:12
 msgid "Not implemented"
-msgstr "Ej implementerat"
+msgstr "Inte implementerat"
 
 #: templates/hyperkitty/errors/notimplemented.html:14
 msgid "This feature has not been implemented yet, sorry."
@@ -285,7 +285,7 @@ msgstr "Fel: privat lista"
 msgid ""
 "This mailing list is private. You must be subscribed to view the archives."
 msgstr ""
-"Denna mailinglista är privat. Du måste vara prenumerant för att se arkiven."
+"Denna sändlista är privat. Du måste vara prenumerant för att se arkiven."
 
 #: templates/hyperkitty/fragments/like_form.html:11
 msgid "You like it (cancel)"
@@ -302,7 +302,7 @@ msgstr "Du måste vara inloggad för att rösta."
 
 #: templates/hyperkitty/fragments/month_list.html:7
 msgid "Threads by"
-msgstr "Trådar av"
+msgstr "Trådar efter"
 
 #: templates/hyperkitty/fragments/month_list.html:7
 msgid " month"
@@ -328,7 +328,7 @@ msgstr "inlägg"
 
 #: templates/hyperkitty/fragments/overview_top_posters.html:27
 msgid "No posters this month (yet)."
-msgstr "Inga affischer den här månaden (ännu)."
+msgstr "Inga postare den här månaden (ännu)."
 
 #: templates/hyperkitty/fragments/send_as.html:5
 msgid "This message will be sent as:"
@@ -340,7 +340,7 @@ msgstr "Ändra avsändare"
 
 #: templates/hyperkitty/fragments/send_as.html:16
 msgid "Link another address"
-msgstr "Koppla samman en annan adress"
+msgstr "Länka en annan adress"
 
 #: templates/hyperkitty/fragments/send_as.html:20
 msgid ""
@@ -352,7 +352,7 @@ msgstr ""
 #: templates/hyperkitty/fragments/thread_left_nav.html:12
 #: templates/hyperkitty/threads/right_col.html:26
 msgid "List overview"
-msgstr "Översikt över listan"
+msgstr "Listöversikt"
 
 #: templates/hyperkitty/fragments/thread_left_nav.html:29
 #: templates/hyperkitty/overview.html:116 views/message.py:76
@@ -404,7 +404,7 @@ msgstr "Sortera i bokstavsordning"
 #: templates/hyperkitty/index.html:58 templates/hyperkitty/index.html:61
 #: templates/hyperkitty/index.html:94
 msgid "By name"
-msgstr "Namn"
+msgstr "Efter namn"
 
 #: templates/hyperkitty/index.html:68
 msgid "Sort by list creation date"
@@ -429,7 +429,7 @@ msgstr "Dölj privat"
 
 #: templates/hyperkitty/index.html:115
 msgid "Find list"
-msgstr "Hitta lista"
+msgstr "Sök lista"
 
 #: templates/hyperkitty/index.html:141 templates/hyperkitty/index.html:209
 #: templates/hyperkitty/user_profile/last_views.html:31
@@ -452,7 +452,7 @@ msgstr "inaktiv"
 #: templates/hyperkitty/overview.html:163 templates/hyperkitty/reattach.html:37
 #: templates/hyperkitty/thread.html:85
 msgid "Loading..."
-msgstr "Laddar..."
+msgstr "Läser in..."
 
 #: templates/hyperkitty/index.html:178 templates/hyperkitty/index.html:255
 msgid "No archived list yet."
@@ -480,7 +480,7 @@ msgstr "Aktivitet under de senaste 30 dagarna"
 #: templates/hyperkitty/threads/right_col.html:104
 #: templates/hyperkitty/threads/summary_thread_large.html:54
 msgid "participants"
-msgstr "deltagarna"
+msgstr "deltagare"
 
 #: templates/hyperkitty/index.html:241 templates/hyperkitty/overview.html:156
 #: templates/hyperkitty/thread_list.html:65
@@ -489,7 +489,7 @@ msgstr "diskussioner"
 
 #: templates/hyperkitty/list_delete.html:7
 msgid "Delete MailingList"
-msgstr "Ta bort mailinglista"
+msgstr "Ta bort sändlista"
 
 #: templates/hyperkitty/list_delete.html:18
 msgid "Delete Mailing List From HyperKitty"
@@ -500,8 +500,8 @@ msgid ""
 "will be deleted from HyperKitty along with all the threads and messages. It "
 "will not be deleted from Mailman Core. Do you want to continue?"
 msgstr ""
-"kommer att raderas från HyperKitty tillsammans med alla trådar och "
-"meddelanden. Det kommer inte att raderas från Mailman Core. Vill du "
+"kommer att tas bort från HyperKitty tillsammans med alla trådar och "
+"meddelanden. Det kommer inte att tas bort från Mailman Core. Vill du "
 "fortsätta?"
 
 #: templates/hyperkitty/list_delete.html:31
@@ -542,7 +542,7 @@ msgid ""
 "        "
 msgstr ""
 "\n"
-"        %(count)s meddelande(n) kommer att raderas. Vill du fortsätta?\n"
+"        %(count)s meddelande(n) kommer att tas bort. Vill du fortsätta?\n"
 "        "
 
 #: templates/hyperkitty/message_new.html:8
@@ -641,7 +641,7 @@ msgstr "Tillbaka till listan"
 
 #: templates/hyperkitty/messages/right_col.html:27
 msgid "Delete this message"
-msgstr "Radera detta meddelande"
+msgstr "Ta bort detta meddelande"
 
 #: templates/hyperkitty/messages/summary_message.html:23
 #, python-format
@@ -673,7 +673,7 @@ msgstr "Favoriter"
 
 #: templates/hyperkitty/overview.html:53
 msgid "Posted"
-msgstr "Publicerad"
+msgstr "Postad"
 
 #: templates/hyperkitty/overview.html:63
 msgid "Recently active discussions"
@@ -697,15 +697,15 @@ msgstr "Diskussioner som du har skrivit inlägg till"
 
 #: templates/hyperkitty/overview.html:109
 msgid ""
-"<span class=\"d-none d-md-inline\">Start a n</span><span class=\"d-md-none"
-"\">N</span>ew thread"
+"<span class=\"d-none d-md-inline\">Start a n</span><span class=\"d-md-"
+"none\">N</span>ew thread"
 msgstr ""
-"<span class=\"d-none d-md-inline\">Starta en</span><span class=\"d-md-none\""
-">nNy</span>tråd"
+"<span class=\"d-none d-md-inline\">Starta en</span><span class=\"d-md-"
+"none\">N</span>y tråd"
 
 #: templates/hyperkitty/overview.html:133
 msgid "Delete Archive"
-msgstr "Radera arkiv"
+msgstr "Ta bort arkiv"
 
 #: templates/hyperkitty/overview.html:143
 msgid "Activity Summary"
@@ -733,7 +733,7 @@ msgstr "Mest aktiva postare"
 
 #: templates/hyperkitty/overview.html:170
 msgid "Prominent posters"
-msgstr "Framträdande affischer"
+msgstr "Framträdande postare"
 
 #: templates/hyperkitty/overview.html:185
 msgid "kudos"
@@ -741,7 +741,7 @@ msgstr "beröm"
 
 #: templates/hyperkitty/reattach.html:9
 msgid "Reattach a thread"
-msgstr "Fäst en tråd på nytt"
+msgstr "Återanslut en tråd"
 
 #: templates/hyperkitty/reattach.html:18
 msgid "Re-attach a thread to another"
@@ -749,11 +749,11 @@ msgstr "Återanslut en tråd till en annan"
 
 #: templates/hyperkitty/reattach.html:20
 msgid "Thread to re-attach:"
-msgstr "Tråd att fästa på nytt:"
+msgstr "Tråd att återansluta:"
 
 #: templates/hyperkitty/reattach.html:27
 msgid "Re-attach it to:"
-msgstr "Sätt fast den igen:"
+msgstr "Återanslut den till:"
 
 #: templates/hyperkitty/reattach.html:29
 msgid "Search for the parent thread"
@@ -765,7 +765,7 @@ msgstr "Sök"
 
 #: templates/hyperkitty/reattach.html:42
 msgid "this thread ID:"
-msgstr "denna tråd ID:"
+msgstr "detta tråd-ID:"
 
 #: templates/hyperkitty/reattach.html:48
 msgid "Do it"
@@ -810,7 +810,7 @@ msgstr "sortera efter senaste först"
 
 #: templates/hyperkitty/search_results.html:61
 msgid "sort by earliest first"
-msgstr "sortera efter tidigast först"
+msgstr "sortera efter tidigaste först"
 
 #: templates/hyperkitty/search_results.html:82
 msgid "Sorry no email could be found for this query."
@@ -906,15 +906,15 @@ msgstr "Ta bort från favoriter"
 
 #: templates/hyperkitty/threads/right_col.html:78
 msgid "Reattach this thread"
-msgstr "Sätt fast tråden igen"
+msgstr "Återanslut denna tråd"
 
 #: templates/hyperkitty/threads/right_col.html:82
 msgid "Delete this thread"
-msgstr "Radera denna tråd"
+msgstr "Ta bort denna tråd"
 
 #: templates/hyperkitty/threads/right_col.html:122
 msgid "Unreads:"
-msgstr "Oläst:"
+msgstr "Olästa:"
 
 #: templates/hyperkitty/threads/right_col.html:124
 msgid "Go to:"
@@ -926,7 +926,7 @@ msgstr "nästa"
 
 #: templates/hyperkitty/threads/right_col.html:125
 msgid "prev"
-msgstr "föregående"
+msgstr "föreg"
 
 #: templates/hyperkitty/threads/summary_thread_large.html:21
 #: templates/hyperkitty/threads/summary_thread_large.html:23
@@ -943,11 +943,11 @@ msgstr "kommentarer"
 
 #: templates/hyperkitty/threads/tags.html:3
 msgid "tags"
-msgstr "tags"
+msgstr "taggar"
 
 #: templates/hyperkitty/threads/tags.html:9
 msgid "Search for tag"
-msgstr "Sök efter tag"
+msgstr "Sök efter tagg"
 
 #: templates/hyperkitty/threads/tags.html:15
 msgid "Remove"
@@ -962,7 +962,7 @@ msgstr "Meddelanden från"
 #: templates/hyperkitty/user_posts.html:38
 #, python-format
 msgid "Back to %(fullname)s's profile"
-msgstr "Tillbaka till %(fullname)s:s profil"
+msgstr "Tillbaka till profilen för %(fullname)s"
 
 #: templates/hyperkitty/user_posts.html:48
 msgid "Sorry no email could be found by this user."
@@ -997,13 +997,13 @@ msgstr "Prenumerationer"
 #: templates/hyperkitty/user_profile/last_views.html:24
 #: templates/hyperkitty/user_profile/votes.html:23
 msgid "Original author:"
-msgstr "Ursprunglig författare:"
+msgstr "Ursprunglig upphovsperson:"
 
 #: templates/hyperkitty/user_profile/favorites.html:26
 #: templates/hyperkitty/user_profile/last_views.html:26
 #: templates/hyperkitty/user_profile/votes.html:25
 msgid "Started on:"
-msgstr "Startade på:"
+msgstr "Startades:"
 
 #: templates/hyperkitty/user_profile/favorites.html:28
 #: templates/hyperkitty/user_profile/last_views.html:28
@@ -1026,7 +1026,7 @@ msgstr "Ämne"
 #: templates/hyperkitty/user_profile/last_views.html:44
 #: templates/hyperkitty/user_profile/votes.html:48
 msgid "Original author"
-msgstr "Ursprunglig författare"
+msgstr "Ursprunglig upphovsperson"
 
 #: templates/hyperkitty/user_profile/favorites.html:43
 #: templates/hyperkitty/user_profile/last_views.html:45
@@ -1118,7 +1118,7 @@ msgstr "Rösta"
 
 #: templates/hyperkitty/user_profile/votes.html:83
 msgid "No vote yet."
-msgstr "Ingen omröstning ännu."
+msgstr "Ingen röstning ännu."
 
 #: templates/hyperkitty/user_public_profile.html:7
 msgid "User Profile"
@@ -1134,7 +1134,7 @@ msgstr "Namn:"
 
 #: templates/hyperkitty/user_public_profile.html:28
 msgid "Creation:"
-msgstr "Skapande:"
+msgstr "Skapad:"
 
 #: templates/hyperkitty/user_public_profile.html:33
 msgid "Votes for this user:"
@@ -1168,11 +1168,11 @@ msgstr "Det gick inte att ta bort meddelandet %(msg_id_hash)s: %(error)s"
 #: views/message.py:311
 #, python-format
 msgid "Successfully deleted %(count)s messages."
-msgstr "Framgångsrikt raderat %(count)s meddelanden."
+msgstr "Tog bort %(count)s meddelanden."
 
 #: views/mlist.py:88
 msgid "for this MailingList"
-msgstr "för denna MailingList"
+msgstr "för denna sändlista"
 
 #: views/mlist.py:100
 msgid "for this month"
@@ -1192,7 +1192,7 @@ msgstr "Inga diskussioner denna månad (ännu)."
 
 #: views/mlist.py:262
 msgid "No vote has been cast this month (yet)."
-msgstr "Ingen röst har avgivits denna månad (ännu)."
+msgstr "Ingen röstning har avgivits denna månad (ännu)."
 
 #: views/mlist.py:291
 msgid "You have not flagged any discussions (yet)."
@@ -1204,16 +1204,16 @@ msgstr "Du har inte skickat något till den här listan (ännu)."
 
 #: views/mlist.py:407
 msgid "You must be a staff member to delete a MailingList"
-msgstr "Du måste vara anställd för att ta bort en MailingList"
+msgstr "Du måste vara en medarbetare för att ta bort en sändlista"
 
 #: views/mlist.py:421
 msgid "Successfully deleted {}"
-msgstr "Framgångsrikt raderad {}"
+msgstr "Tog bort {}"
 
 #: views/search.py:115
 #, python-format
 msgid "Parsing error: %(error)s"
-msgstr "Parsing-fel: %(error)s"
+msgstr "Tolkningsfel: %(error)s"
 
 #: views/thread.py:192
 msgid "This thread in gzipped mbox format"
