--- a/Inkscape/inkscape.po
+++ b/Inkscape/inkscape.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: inkscape\n"
 "Report-Msgid-Bugs-To: inkscape-translator@lists.inkscape.org\n"
 "POT-Creation-Date: 2025-05-12 20:42+0200\n"
-"PO-Revision-Date: 2025-05-22 11:05+0200\n"
+"PO-Revision-Date: 2025-06-12 18:46+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: Svenska <tp-sv@listor.tp-sv.se>\n"
 "Language: sv\n"
@@ -15804,7 +15804,7 @@ msgstr ""
 #: ../src/gradient-drag.cpp:1495 ../src/gradient-drag.cpp:1504
 #: ../src/gradient-drag.cpp:1511
 msgid " (stroke)"
-msgstr " (linje)"
+msgstr " (streck)"
 
 #: ../src/gradient-drag.cpp:1501
 #, c-format
