--- a/Inkscape/inkscape.po
+++ b/Inkscape/inkscape.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: inkscape\n"
 "Report-Msgid-Bugs-To: inkscape-translator@lists.inkscape.org\n"
 "POT-Creation-Date: 2025-06-11 11:51+0000\n"
-"PO-Revision-Date: 2025-06-21 20:34+0200\n"
+"PO-Revision-Date: 2025-06-22 08:02+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: Svenska <tp-sv@listor.tp-sv.se>\n"
 "Language: sv\n"
@@ -10454,11 +10454,11 @@ msgstr "Transformera"
 
 #: ../src/actions/actions-transform.cpp:142
 msgid "Translate"
-msgstr "Översätt"
+msgstr "Translatera"
 
 #: ../src/actions/actions-transform.cpp:142
 msgid "Translate selected objects (dx,dy)"
-msgstr "Översätt valda objekt (dx,dy)"
+msgstr "Translatera valda objekt (dx,dy)"
 
 #: ../src/actions/actions-transform.cpp:143
 #: ../src/actions/actions-transform.cpp:148 ../src/selection.cpp:300
@@ -30293,7 +30293,7 @@ msgstr "Flytta original: kloner och länkade offsets"
 
 #: ../src/ui/dialog/inkscape-preferences.cpp:2750
 msgid "Clones are translated by the same vector as their original"
-msgstr "Kloner är flyttade med samma vektor som deras orginal"
+msgstr "Kloner är translaterade med samma vektor som deras orginal"
 
 #: ../src/ui/dialog/inkscape-preferences.cpp:2752
 msgid "Clones preserve their positions when their original is moved"
@@ -46321,11 +46321,11 @@ msgstr "Attribut för att interpoleras:"
 
 #: ../share/extensions/interp_att_g.inx:11
 msgid "Translate X"
-msgstr "Översätt X"
+msgstr "Translatera X"
 
 #: ../share/extensions/interp_att_g.inx:12
 msgid "Translate Y"
-msgstr "Översätt Y"
+msgstr "Translatera Y"
 
 #: ../share/extensions/interp_att_g.inx:18
 msgid "Other Attribute"
@@ -46340,7 +46340,7 @@ msgstr ""
 
 #: ../share/extensions/interp_att_g.inx:20
 msgid "Other Attribute:"
-msgstr "Andra attribut:"
+msgstr "Annat attribut:"
 
 #
 # File: ../share/extensions/interp_att_g.inx, line: 21
@@ -46350,7 +46350,7 @@ msgstr "Exempel: r, bredd, inkscape:rundad, sodipodi:sidor"
 
 #: ../share/extensions/interp_att_g.inx:21
 msgid "Other Attribute type:"
-msgstr "Annan Typ av attribut:"
+msgstr "Annan attributtyp:"
 
 #: ../share/extensions/interp_att_g.inx:23
 msgid "Number"
@@ -46366,7 +46366,7 @@ msgstr "Tagg"
 
 #: ../share/extensions/interp_att_g.inx:28
 msgid "Transformation"
-msgstr "Omvandling"
+msgstr "Transformation"
 
 #: ../share/extensions/interp_att_g.inx:32
 msgid "Start Value:"
@@ -46407,15 +46407,15 @@ msgstr "Auto-text:"
 
 #: ../share/extensions/jessyink_autotexts.inx:8
 msgid "None (remove)"
-msgstr "Ingen (tag bort)"
+msgstr "Ingen (ta bort)"
 
 #: ../share/extensions/jessyink_autotexts.inx:9
 msgid "Slide title"
-msgstr "Sidans titel"
+msgstr "Titel för presentationssida"
 
 #: ../share/extensions/jessyink_autotexts.inx:10
 msgid "Slide number"
-msgstr "Presentationssidonummer"
+msgstr "Nummer för presentationssida"
 
 #: ../share/extensions/jessyink_autotexts.inx:11
 msgid "Number of slides"
@@ -46427,8 +46427,8 @@ msgid ""
 "JessyInk presentation. Please see code.google.com/p/jessyink for more "
 "details."
 msgstr ""
-"Detta tillägg låter er installera, uppdatera och ta bort auto-texter för en "
-"JessyInk-presentation. Se code.google.com/p/jessyink för ytterligare "
+"Detta tillägg låter dig installera, uppdatera och ta bort automatiska texter "
+"för en JessyInk-presentation. Se code.google.com/p/jessyink för ytterligare "
 "information."
 
 #: ../share/extensions/jessyink_autotexts.inx:21
@@ -46504,7 +46504,7 @@ msgstr ""
 
 #: ../share/extensions/jessyink_export.inx:3
 msgid "JessyInk zipped pdf or png output"
-msgstr "JessyInk zippad pdf eller png output"
+msgstr "JessyInk zippad pdf eller png-utmatning"
 
 #: ../share/extensions/jessyink_export.inx:9
 msgid "PDF"
@@ -46920,7 +46920,7 @@ msgstr "Fördelning av förskjutningarna:"
 
 #: ../share/extensions/jitternodes.inx:12
 msgid "Uniform"
-msgstr "Likformigt"
+msgstr "Enhetligt"
 
 #: ../share/extensions/jitternodes.inx:13
 msgid "Pareto"
@@ -46964,11 +46964,11 @@ msgstr "Skriva över befintliga exporter"
 
 #: ../share/extensions/layer2png.inx:11
 msgid "Directory"
-msgstr "Mapp"
+msgstr "Katalog"
 
 #: ../share/extensions/layer2png.inx:15
 msgid "Layer Slicer"
-msgstr "Skivare för lager"
+msgstr "Lagerskivare"
 
 #: ../share/extensions/layer2png.inx:16
 msgid ""
@@ -47124,7 +47124,7 @@ msgstr ""
 "    * Beräkna layoutstorleken automatiskt: använd inte värdena för "
 "layoutstorleken.\n"
 "    * Layoutmarginaler: vitt utrymme runt varje del av layouten.\n"
-"    * Layout padding: inre padding för varje del av layouten.\n"
+"    * Layoututfyllnad: inre utfyllnad för varje del av layouten.\n"
 "      "
 
 #: ../share/extensions/layout_nup.inx:65
@@ -47306,11 +47306,11 @@ msgstr "Modifiera på plats"
 
 #: ../share/extensions/measure.inx:3
 msgid "Measure Path"
-msgstr "Mät slinga"
+msgstr "Mätslinga"
 
 #: ../share/extensions/measure.inx:5
 msgid "Measurement Type:"
-msgstr "Måttyp:"
+msgstr "Mättyp:"
 
 #: ../share/extensions/measure.inx:7
 msgctxt "measure extension"
@@ -49103,11 +49103,11 @@ msgstr ""
 
 #: ../share/extensions/output_scour.inx:62
 msgid "Space"
-msgstr "Rymden"
+msgstr "Mellanslag"
 
 #: ../share/extensions/output_scour.inx:63
 msgid "Tab"
-msgstr "Flik"
+msgstr "Tabb"
 
 #: ../share/extensions/output_scour.inx:64
 msgctxt "Indent"
@@ -49274,11 +49274,11 @@ msgstr "Sortiment och provtagning"
 
 #: ../share/extensions/param_curves.inx:7
 msgid "Start t-value:"
-msgstr "Starta t-värde:"
+msgstr "Start t-värde:"
 
 #: ../share/extensions/param_curves.inx:8
 msgid "End t-value:"
-msgstr "Sluta t-värde:"
+msgstr "Slut t-värde:"
 
 #: ../share/extensions/param_curves.inx:9
 msgid "Multiply t-range by 2*pi"
@@ -49370,7 +49370,7 @@ msgstr "Konvertera varje vald slinga till 1x1 mesh"
 
 #: ../share/extensions/path_mesh_p2m.inx:13
 msgid "Path to mesh"
-msgstr "Väg till nät"
+msgstr "Slinga till mesh"
 
 #: ../share/extensions/path_mesh_p2m.inx:14
 msgid "Convert geometry of selected path (4 corners) to a Mesh Gradient"
@@ -49379,7 +49379,7 @@ msgstr ""
 
 #: ../share/extensions/path_number_nodes.inx:3
 msgid "Number Nodes"
-msgstr "Numrera noder"
+msgstr "Nummernoder"
 
 #: ../share/extensions/path_number_nodes.inx:8
 msgid "Size of the node number labels (20px, 12pt...)"
@@ -49600,7 +49600,7 @@ msgstr "Punkter"
 #: ../share/extensions/perfectboundcover.inx:15
 #: ../share/extensions/perfectboundcover.inx:24
 msgid "Bond Weight #"
-msgstr "Bond Vikt #"
+msgstr "Bindningsvikt #"
 
 #: ../share/extensions/perfectboundcover.inx:16
 #: ../share/extensions/perfectboundcover.inx:25
@@ -49682,7 +49682,7 @@ msgstr "Nedre vänstra hörnet"
 
 #: ../share/extensions/plotter.inx:3
 msgid "Plot"
-msgstr "Handling"
+msgstr "Plotta"
 
 #: ../share/extensions/plotter.inx:5
 msgid ""
@@ -49699,11 +49699,11 @@ msgstr "Typ av port:"
 
 #: ../share/extensions/plotter.inx:9
 msgid "Serial"
-msgstr "Serienummer"
+msgstr "Seriell"
 
 #: ../share/extensions/plotter.inx:12
 msgid "Parallel port:"
-msgstr "Parallell port:"
+msgstr "Parallellport:"
 
 #: ../share/extensions/plotter.inx:12
 msgid ""
@@ -50372,11 +50372,11 @@ msgstr "CCITT"
 
 #: ../share/extensions/raster_output_tiff.inx:11
 msgid "Group 3"
-msgstr "Grupp 3"
+msgstr "Group 3"
 
 #: ../share/extensions/raster_output_tiff.inx:12
 msgid "Group 4"
-msgstr "Grupp 4"
+msgstr "Group 4"
 
 #: ../share/extensions/raster_output_tiff.inx:13
 msgid "JPEG"
@@ -50384,7 +50384,7 @@ msgstr "JPEG"
 
 #: ../share/extensions/raster_output_tiff.inx:14
 msgid "Deflate"
-msgstr "Töm på luft"
+msgstr "Deflate"
 
 #: ../share/extensions/raster_output_tiff.inx:15
 msgid "SGI Log"
@@ -50412,7 +50412,7 @@ msgstr "Exportera till WebP"
 
 #: ../share/extensions/raster_output_webp.inx:11
 msgid "Lossless:"
-msgstr "Lossless:"
+msgstr "Förlustfri:"
 
 #: ../share/extensions/raster_output_webp.inx:11
 msgid "Do not use lossy compression."
@@ -50586,7 +50586,7 @@ msgstr "Ritningstyp:"
 
 #: ../share/extensions/render_barcode_qrcode.inx:71
 msgid "Smooth type:"
-msgstr "Slät typ:"
+msgstr "Slätningstyp:"
 
 #: ../share/extensions/render_barcode_qrcode.inx:72
 msgid "Neutral"
@@ -50842,7 +50842,7 @@ msgstr ""
 
 #: ../share/extensions/restack.inx:57 ../share/extensions/ungroup_deep.inx:13
 msgid "Arrange"
-msgstr "Gruppera"
+msgstr "Ordna"
 
 #: ../share/extensions/rtree.inx:3
 msgid "Random Tree"
@@ -50850,7 +50850,7 @@ msgstr "Slumpmässigt träd"
 
 #: ../share/extensions/rtree.inx:5
 msgid "Initial size:"
-msgstr "Ursprunglig storlek:"
+msgstr "Initial storlek:"
 
 #: ../share/extensions/rtree.inx:6
 msgid "Minimum size:"
@@ -50957,7 +50957,7 @@ msgstr "R - Ringens radie (px):"
 
 #: ../share/extensions/spirograph.inx:6
 msgid "r - Gear Radius (px):"
-msgstr "r - Växelns radie (px):"
+msgstr "r - Kuggradie (px):"
 
 #: ../share/extensions/spirograph.inx:7
 msgid "d - Pen Radius (px):"
@@ -50965,7 +50965,7 @@ msgstr "d - Pennradie (px):"
 
 #: ../share/extensions/spirograph.inx:8
 msgid "Gear Placement:"
-msgstr "Placering av växeln:"
+msgstr "Placering av kugg:"
 
 #: ../share/extensions/spirograph.inx:9
 msgid "Inside (Hypotrochoid)"
@@ -50993,7 +50993,7 @@ msgstr "Beteende:"
 
 #: ../share/extensions/svg2fxg.inx:3
 msgid "FXG Output"
-msgstr "FXGF utdata"
+msgstr "FXGF-utmatning"
 
 #: ../share/extensions/svg2fxg.inx:8
 msgid "Flash XML Graphics (*.fxg)"
@@ -51031,12 +51031,12 @@ msgstr "Visa veckonummer"
 
 #: ../share/extensions/svgcalendar.inx:11
 msgid "Week start day:"
-msgstr "Veckans start dag:"
+msgstr "Veckans startdag:"
 
 #: ../share/extensions/svgcalendar.inx:12
 #: ../share/extensions/svgcalendar.inx:18
 msgid "Sunday"
-msgstr "söndag"
+msgstr "Söndag"
 
 #: ../share/extensions/svgcalendar.inx:13
 msgid "Monday"
@@ -51044,11 +51044,11 @@ msgstr "Måndag"
 
 #: ../share/extensions/svgcalendar.inx:15
 msgid "Weekend:"
-msgstr "Helgen:"
+msgstr "Helg:"
 
 #: ../share/extensions/svgcalendar.inx:16
 msgid "Saturday and Sunday"
-msgstr "Lördag och Söndag"
+msgstr "Lördag och söndag"
 
 #: ../share/extensions/svgcalendar.inx:17
 msgid "Saturday"
@@ -51120,7 +51120,7 @@ msgstr "Dagstypsnitt:"
 
 #: ../share/extensions/svgcalendar.inx:43
 msgid "Localization"
-msgstr "Lokalisering"
+msgstr "Lokalanpassning"
 
 #: ../share/extensions/svgcalendar.inx:44
 msgid "You may change the names for other languages:"
@@ -51172,7 +51172,7 @@ msgstr "Windows - Central- och Östeuropa"
 
 #: ../share/extensions/svgcalendar.inx:120
 msgid "Windows - Russian and more"
-msgstr "Windows - ryska och mer"
+msgstr "Windows - Ryska och fler"
 
 #: ../share/extensions/svgcalendar.inx:121
 msgid "Windows - Western Europe"
@@ -51232,7 +51232,7 @@ msgstr "Stopp efter (30 Rekommenderas)"
 
 #: ../share/extensions/synfig_output.inx:3
 msgid "Synfig Output"
-msgstr "Synfig Utgång"
+msgstr "Synfig-utmatning"
 
 #: ../share/extensions/synfig_output.inx:10
 msgid "Synfig Animation (*.sif)"
@@ -51431,7 +51431,7 @@ msgstr "sLUmPa gEMEN/VERsal"
 
 #: ../share/extensions/text_sentencecase.inx:3
 msgid "Sentence case"
-msgstr "Fall med domar"
+msgstr "Meningsstil"
 
 #: ../share/extensions/text_split.inx:3
 msgid "Split Text"
@@ -51498,7 +51498,7 @@ msgstr ""
 
 #: ../share/extensions/text_titlecase.inx:3
 msgid "Title Case"
-msgstr "Titel Fall"
+msgstr "Titelstil"
 
 #: ../share/extensions/text_uppercase.inx:3
 msgid "UPPERCASE"
@@ -51920,7 +51920,7 @@ msgstr "JavaScript"
 
 #: ../share/extensions/web_transmit_att.inx:3
 msgid "Transmit Attributes"
-msgstr "Attribut för sändning"
+msgstr "Attribut för överföring"
 
 #: ../share/extensions/web_transmit_att.inx:7
 msgid "Attribute to transmit:"
@@ -51928,16 +51928,16 @@ msgstr "Attribut att överföra:"
 
 #: ../share/extensions/web_transmit_att.inx:8
 msgid "When to transmit:"
-msgstr "När ska du sända:"
+msgstr "När ska du överföra:"
 
 #: ../share/extensions/web_transmit_att.inx:26
 msgid "Source and destination of transmitting:"
-msgstr "Källa och destination för sändning:"
+msgstr "Källa och destination för överföring:"
 
 # TODO
 #: ../share/extensions/web_transmit_att.inx:27
 msgid "All selected ones transmit to the last one"
-msgstr "Alla valda sänds till den sista"
+msgstr "Alla valda överförs till den sista"
 
 #: ../share/extensions/web_transmit_att.inx:28
 msgid "The first selected transmits to all others"
@@ -51961,7 +51961,7 @@ msgstr ""
 
 #: ../share/extensions/webslicer_create_group.inx:3
 msgid "Set a Layout Group"
-msgstr "Ange en layoutgrupp"
+msgstr "Ställ in en layoutgrupp"
 
 #: ../share/extensions/webslicer_create_group.inx:8
 #: ../share/extensions/webslicer_create_rect.inx:33
@@ -51975,26 +51975,26 @@ msgstr "HTML-klassattribut:"
 
 #: ../share/extensions/webslicer_create_group.inx:10
 msgid "Width unit:"
-msgstr "Bredd enhet:"
+msgstr "Breddenhet:"
 
 #: ../share/extensions/webslicer_create_group.inx:11
 #: ../share/extensions/webslicer_create_group.inx:16
 msgid "Pixel (fixed)"
-msgstr "Bildpunkt (fixerad)"
+msgstr "Bildpunkt (fast)"
 
 #: ../share/extensions/webslicer_create_group.inx:12
 #: ../share/extensions/webslicer_create_group.inx:17
 msgid "Percent (relative to parent size)"
-msgstr "Procent (i förhållande till moderbolagets storlek)"
+msgstr "Procent (i förhållande till överordnad storlek)"
 
 #: ../share/extensions/webslicer_create_group.inx:13
 #: ../share/extensions/webslicer_create_group.inx:18
 msgid "Undefined (relative to non-floating content size)"
-msgstr "Odefinierad (relativt icke-flytande innehålls storlek)"
+msgstr "Odefinierad (relativt icke-flytande innehållsstorlek)"
 
 #: ../share/extensions/webslicer_create_group.inx:15
 msgid "Height unit:"
-msgstr "Höjd enhet:"
+msgstr "Höjdenhet:"
 
 #: ../share/extensions/webslicer_create_group.inx:20
 #: ../share/extensions/webslicer_create_rect.inx:17
@@ -52018,11 +52018,11 @@ msgstr "Skivare"
 
 #: ../share/extensions/webslicer_create_rect.inx:3
 msgid "Create a Slicer Rectangle"
-msgstr "Skapa en Slicer-rektangel"
+msgstr "Skapa en skivad rektangel"
 
 #: ../share/extensions/webslicer_create_rect.inx:12
 msgid "DPI:"
-msgstr "Upplösning Y (dpi)"
+msgstr "DPI:"
 
 #: ../share/extensions/webslicer_create_rect.inx:13
 msgid "Force Dimension:"
@@ -52080,7 +52080,7 @@ msgstr "Alternativ för HTML-exportering"
 # TODO
 #: ../share/extensions/webslicer_create_rect.inx:36
 msgid "Layout disposition:"
-msgstr "Layout disposition:"
+msgstr "Layoutdisposition:"
 
 #: ../share/extensions/webslicer_create_rect.inx:37
 msgid "Positioned html block element with the image as Background"
@@ -52088,7 +52088,7 @@ msgstr "Positionerat html block element med bild som bakgrund"
 
 #: ../share/extensions/webslicer_create_rect.inx:38
 msgid "Tiled Background (on parent group)"
-msgstr "Kaklad bakgrund (på föräldragrupp)"
+msgstr "Brickad bakgrund (på föräldragrupp)"
 
 #: ../share/extensions/webslicer_create_rect.inx:39
 msgid "Background — repeat horizontally (on parent group)"
@@ -52407,7 +52407,7 @@ msgstr "Inkscape 1.1"
 
 #: ../org.inkscape.Inkscape.appdata.xml.in:129
 msgid "Welcome dialog"
-msgstr "Välkommen dialog"
+msgstr "Välkomstdialog"
 
 #: ../org.inkscape.Inkscape.appdata.xml.in:130
 msgid "Command palette to search for functions"
@@ -52649,7 +52649,7 @@ msgstr "Öppna ett nytt fönster"
 
 #: ../share/ui/units.xml:8
 msgid "Percentage"
-msgstr "Procentdel"
+msgstr "Procentsats"
 
 #: ../share/ui/units.xml:11
 msgid "pixel"
@@ -52659,7 +52659,7 @@ msgstr "bildpunkt"
 # File: ../share/ui/units.xml, line: 15
 #: ../share/ui/units.xml:15
 msgid "CSS Pixels (96/inch)"
-msgstr "CSS-bildpunkter (96/inch)"
+msgstr "CSS-bildpunkter (96/tum)"
 
 #: ../share/ui/units.xml:18
 msgid "point"
@@ -52671,7 +52671,7 @@ msgstr "punkter"
 
 #: ../share/ui/units.xml:22
 msgid "PostScript points (72/inch)"
-msgstr "PostScript-punkter (72/inch)"
+msgstr "PostScript-punkter (72/tum)"
 
 #
 # File: ../share/ui/units.xml, line: 25
@@ -52701,7 +52701,7 @@ msgstr "tum"
 # File: ../share/ui/units.xml, line: 36
 #: ../share/ui/units.xml:36
 msgid "Inches (96 px/in)"
-msgstr "Tunnlar (96 px/in)"
+msgstr "Tum (96 px/tum)"
 
 #: ../share/ui/units.xml:39
 msgid "millimeter"
@@ -52713,7 +52713,7 @@ msgstr "millimeter"
 
 #: ../share/ui/units.xml:43
 msgid "Millimeters (25.4 mm/in)"
-msgstr "Millimeter (25,4 mm/in)"
+msgstr "Millimeter (25,4 mm/tum)"
 
 #: ../share/ui/units.xml:46
 msgid "centimeter"
@@ -52773,15 +52773,15 @@ msgstr "varv"
 # File: ../share/ui/units.xml, line: 78
 #: ../share/ui/units.xml:78
 msgid "Turns (360 deg/turn)"
-msgstr "Vändningar (360 grader/vändning)"
+msgstr "Varv (360 grader/varv)"
 
 #: ../share/ui/units.xml:81
 msgid "font-height"
-msgstr "typsnittshöjd"
+msgstr "font-height"
 
 #: ../share/ui/units.xml:82
 msgid "font-heights"
-msgstr "typsnittshöjder"
+msgstr "font-heights"
 
 #: ../share/ui/units.xml:85
 msgid "Font height"
@@ -52789,23 +52789,23 @@ msgstr "Typsnittets höjd"
 
 #: ../share/ui/units.xml:89
 msgid "x-heights"
-msgstr "x-höjder"
+msgstr "x-heights"
 
 #: ../share/ui/units.xml:92
 msgid "Height of letter 'x'"
-msgstr "Höjden på bokstaven \"x"
+msgstr "Höjden på bokstaven “x”"
 
 #
 # File: ../share/ui/units.xml, line: 95
 #: ../share/ui/units.xml:95
 msgid "half-em"
-msgstr "halv-em"
+msgstr "half-em"
 
 #
 # File: ../share/ui/units.xml, line: 96
 #: ../share/ui/units.xml:96
 msgid "half-ems"
-msgstr "halv-em"
+msgstr "half-ems"
 
 #
 # File: ../share/ui/units.xml, line: 99
